Fix Thumbnail alignment

--- a/SCSS/Rem Thumbnail.scss
+++ b/SCSS/Rem Thumbnail.scss
@@ -27,12 +27,13 @@
 	}
 }
 
-@mixin thumbnail-set() {
+@mixin thumbnail-set($margin-right: null) {
 	span.image-node__container.inline-block {
 		height: 1em;
 		width: auto;
+		margin-right: $margin-right;
 	
-		>div.image-node__container {
+		> div.image-node__container {
 			height: 1em !important;
 			width: unset !important;
 			max-width: 1em !important;
@@ -41,15 +42,15 @@
 			min-width: 1em !important;
 			min-height: unset !important;
 	
-			>span.image-node {
+			> span.image-node {
 				object-fit: contain !important;
 				object-position: center;
 	
-				>div:nth-of-type(1) {
+				> div:nth-of-type(1) {
 					display: none
 				}
 	
-				>div:nth-of-type(2) {
+				> div:nth-of-type(2) {
 					img.thumbnail--with-width {
 						object-fit: contain;
 						object-position: center;
@@ -257,7 +258,12 @@
 	}
 // Tag bar
 	.hierarchy-editor__tag-bar__tag {
-		@include thumbnail-set;
+		.RichTextViewer {
+			display: flex;
+			align-items: center;
+
+			@include thumbnail-set(3px);
+		}
 	}
 // Search Result
 	// Global Search Result (⌘+P Window)
